[package]
name = "cairo-bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-vm = { git = "https://github.com/zksecurity/cairo-vm.git", features = [
    "extensive_hints",
], rev = "098e0f9cd3525922403f810a59653fc73d6f22c7" }
num-traits = "0.2.19"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
starknet-crypto = "0.6.2"
starknet-types-core = "0.1.2"
thiserror = "1.0.61"
thiserror-no-std = "2.0.2"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.19.0"
