[package]
name = "cairo-bootloader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stwo-bootloader"
path = "src/main.rs"

[dependencies]
cairo-vm = { git = "https://github.com/m-kus/cairo-vm.git", features = [
    "extensive_hints",
], rev = "30474757faad1e6119d1910aee86814471a5f65c" }
num-traits = "0.2.19"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
starknet-crypto = "0.6.2"
starknet-types-core = "0.1.2"
thiserror = "1.0.61"
thiserror-no-std = "2.0.2"
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.19.0"
